[package]
name = "create-mnt-app"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "stable"

[[bin]]
name="create-mnt-app"
path = "cli/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dialoguer = "0.10.3"
names = "0.14.0"
rust-embed = "6.6.0"
serde = "1.0.153"
spinach = "2.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
tera = "1.17.1"
